--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT=5000
 MONGODB_URI=mongodb://localhost:27017/xpress-inn-feedback
 
 # Email Configuration
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+EMAIL_USER=xpressinnmarshall@gmail.com
+EMAIL_PASS=zkbw virh mpkw tyrw
 BUSINESS_EMAIL=xpressinn@example.com
 
 # Frontend URL
