--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/xpress-inn-feedback
+
+# MongoDB Atlas URI - Replace with your actual credentials
+# Format: mongodb+srv://<username>:<password>@cluster0.cikdgjg.mongodb.net/<database-name>?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://your-username:your-password@cluster0.cikdgjg.mongodb.net/xpress-inn-feedback?retryWrites=true&w=majority
+
+# OR use local MongoDB (uncomment if using local)
+# MONGODB_URI=mongodb://localhost:27017/xpress-inn-feedback
 
 # Email Configuration
 EMAIL_USER=your-email@gmail.com
