Fix MongoDB URI with database name and correct configuration

--- a/.env
+++ b/.env
@@ -1,16 +1,10 @@
 PORT=5000
-
-# MongoDB Atlas URI - Replace with your actual credentials
-# Format: mongodb+srv://<username>:<password>@cluster0.cikdgjg.mongodb.net/<database-name>?retryWrites=true&w=majority
-MONGODB_URI=mongodb+srv://your-username:your-password@cluster0.cikdgjg.mongodb.net/xpress-inn-feedback?retryWrites=true&w=majority
-
-# OR use local MongoDB (uncomment if using local)
-# MONGODB_URI=mongodb://localhost:27017/xpress-inn-feedback
+MONGODB_URI=mongodb+srv://aryankaushik541_db_user:OWCQRSMN7jowyfsy@cluster0.cikdgjg.mongodb.net/xpress-inn-feedback?retryWrites=true&w=majority&appName=Cluster0
 
 # Email Configuration
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
-BUSINESS_EMAIL=xpressinn@example.com
+EMAIL_USER=xpressinnmarshall@gmail.com
+EMAIL_PASS=zkbw virh mpkw tyrw
+BUSINESS_EMAIL=xpressinnmarshall@gmail.com
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
