--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://aryankaushik541_db_user:OWCQRSMN7jowyfsy@cluster0.cikdgjg.mongodb.net/xpress-inn-feedback?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017/skk
 
 # Email Configuration
 EMAIL_USER=xpressinnmarshall@gmail.com
 EMAIL_PASS=zkbw virh mpkw tyrw
+EMAIL_PORT=587
+EMAIL_FROM=xpressinnmarshall@gmail.com
 BUSINESS_EMAIL=xpressinnmarshall@gmail.com
 
 # Frontend URL
