--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ PORT=5000
 MONGODB_URI=mongodb://localhost:27017/skk
 
 # Email Configuration
-EMAIL_USER=xpressinnmarshall@gmail.com
-EMAIL_PASS=zkbw virh mpkw tyrw
+EMAIL_USER=aryankaushik541@gmail.com
+EMAIL_PASS=ckux icel gemm pzas
 EMAIL_PORT=587
-EMAIL_FROM=xpressinnmarshall@gmail.com
-BUSINESS_EMAIL=xpressinnmarshall@gmail.com
+EMAIL_FROM=aryankaushik541@gmail.com
+BUSINESS_EMAIL=aryankaushik541@gmail.com
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
