--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/skk
+MONGODB_URI=mongodb+srv://aryankaushik541_db_user:tySvEfo3vFHxEOLB@cluster0.cikdgjg.mongodb.net/?appName=Cluster0
 
 # Email Configuration
-EMAIL_USER=xpressinnmarshall@gmail.com
-EMAIL_PASS=zkbw virh mpkw tyrw
+EMAIL_USER=aryankaushik541@gmail.com
+EMAIL_PASS=gnkm qpog kbue otsq
 EMAIL_PORT=587
-EMAIL_FROM=xpressinnmarshall@gmail.com
-BUSINESS_EMAIL=xpressinnmarshall@gmail.com
+EMAIL_FROM=aryankaushik541@gmail.com
+BUSINESS_EMAIL=aryankaushik541@gmail.com
 
 # Frontend URL
 FRONTEND_URL=https://warm-donut.vercel.app/
