--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/skk
+MONGODB_URI="mongodb+srv://Vercel-Admin-skk:sGUWu40rSSCsDyMg@skk.gffeywc.mongodb.net/?retryWrites=true&w=majority"
 
 # Email Configuration
 EMAIL_USER=aryankaushik541@gmail.com
