--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI="mongodb+srv://Vercel-Admin-skk:sGUWu40rSSCsDyMg@skk.gffeywc.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI=mongodb+srv://aryankaushik541_db_user:JKdQ4q6AyKFNEQhT@cluster0.cikdgjg.mongodb.net/xpress-inn-feedback?retryWrites=true&w=majority
 
 # Email Configuration
 EMAIL_USER=aryankaushik541@gmail.com
@@ -10,3 +10,4 @@ BUSINESS_EMAIL=aryankaushik541@gmail.com
 
 # Frontend URL
 FRONTEND_URL=https://warm-donut.vercel.app/
+NODE_ENV=production
