--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ EMAIL_FROM=xpressinnmarshall@gmail.com
 BUSINESS_EMAIL=xpressinnmarshall@gmail.com
 
 # Frontend URL
-FRONTEND_URL=https://warm-donut.vercel.app/
+FRONTEND_URL=http://localhost:3000
