--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "mongodb": "^7.1.0",
     "mongoose": "^9.1.5",
-    "nodemailer": "^7.0.13"
+    "nodemailer": "^7.0.13",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
