--- a/package.json
+++ b/package.json
@@ -2,30 +2,23 @@
   "name": "qr-p-backend",
   "version": "1.0.0",
   "description": "Feedback API for Xpress Inn Marshall",
-  "main": "server.js",
+  "main": "utils/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node utils/server.js",
+    "dev": "nodemon utils/server.js"
   },
-  "keywords": [
-    "feedback",
-    "api",
-    "express",
-    "mongodb",
-    "xpress-inn"
-  ],
   "author": "Aryan Kaushik",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.1.5",
-    "nodemailer": "^7.0.13",
-    "resend": "^6.9.2"
+    "mongoose": "^9.2.1",
+    "nodemailer": "^7.0.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
