--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ EMAIL_PASS=gnkm qpog kbue otsq
 EMAIL_PORT=587
 EMAIL_FROM=aryankaushik541@gmail.com
 BUSINESS_EMAIL=aryankaushik541@gmail.com
-RESEND_API_KEY=re_K9PeMW2h_6LyPLfcaCH6XZFMLafxKfT6C
+#RESEND_API_KEY=re_K9PeMW2h_6LyPLfcaCH6XZFMLafxKfT6C
 
 # Frontend URL
 FRONTEND_URL=https://warm-donut.vercel.app
