--- a/.env
+++ b/.env
@@ -2,11 +2,12 @@ PORT=5000
 
 MONGODB_URI=mongodb+srv://aryankaushik541_db_user:wiA6zyP8cWjaq5Bu@cluster0.cikdgjg.mongodb.net/feedbackDB?retryWrites=true&w=majority
 # Email Configuration
-EMAIL_USER=aryankaushik541@gmail.com
-EMAIL_PASS=gnkm qpog kbue otsq
+EMAIL_USER=xpressinnmarshall@gmail.com
+EMAIL_PASS=zkbw virh mpkw tyrw
 EMAIL_PORT=587
-EMAIL_FROM=aryankaushik541@gmail.com
-BUSINESS_EMAIL=aryankaushik541@gmail.com
+EMAIL_FROM=xpressinnmarshall@gmail.com
+BUSINESS_EMAIL=xpressinnmarshall@gmail.com
+
 #RESEND_API_KEY=re_K9PeMW2h_6LyPLfcaCH6XZFMLafxKfT6C
 
 # Frontend URL
